[package]
name = "knod"
version = "0.1.0"
authors = ["Adam Margherio <adam.margherio@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.33.0"
kube-derive = "0.33.0"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_16"] }

clap = "2.33.0"

log = "0.4.8"
env_logger = "0.7.1"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.2"
base64 = "0.12.0"
chrono = { version = "0.4.11", features = ["serde"] }

tokio = { version = "0.2.18", features = ["full"] }

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"